# LocomotionWithNP3O

./: README.md  global_config.py  model_barlow.pt  model_barlow_mlp_contact.pt  model_him_contact_force.pt  model_mixed_him_baseline_kp30.pt  simple_play.py  train.py
algorithm/: __init__.py  np3o.py  ppo.py
configs/: __init__.py  base_config.py  go1_config.py  go1_constraint_config.py  go2_constraint.py  go2_constraint_cnn_phase1.py  go2_constraint_cnn_phase2.py  go2_constraint_him.py  go2_constraint_phase1_config.py  go2_constraint_phase2_config.py  go2_constraint_rnn.py  go2_constraint_trans.py  (+8 more)
depoly/: CMakeLists.txt  State_Rl.cpp  State_Rl.h  cfg.hpp  robot_interface.hpp  user_controller.hpp
depoly/params/: params.json
depoly/src/unitree_guide/unitree_guide/: CMakeLists.txt
depoly/src/unitree_guide/unitree_guide/include/FSM/: FSM.h  State_FixedDown.h  State_FixedStand.h  State_Rl.h
depoly/src/unitree_guide/unitree_guide/include/common/: enumClass.h  unitreeLeg.h  unitreeRobot.h
depoly/src/unitree_guide/unitree_guide/include/interface/: CmdPanel.h  IOSDK.h  KeyBoard.h  WirelessHandle.h
depoly/src/unitree_guide/unitree_guide/launch/: gazeboSim.launch
depoly/src/unitree_guide/unitree_guide/src/: main.cpp
depoly/src/unitree_guide/unitree_guide/src/FSM/: FSM.cpp  State_FixedDown.cpp  State_FixedStand.cpp  State_Rl.cpp
depoly/src/unitree_guide/unitree_guide/src/common/: LowPassFilter.cpp  unitreeRobot.cpp
depoly/src/unitree_guide/unitree_guide/src/interface/: IOSDK.cpp  WirelessHandle.cpp
depoly/src/unitree_ros_to_real/: README.md
utils/: math.py  (+6 more)
(+14 files in other folders)
